# emv_profiler

./: .gitignore  emv_profiler.spec  env_mapping_mc_tf.json  mc_profile_parser.spec  pyproject.toml
.github/workflows/: build-windows.yml
base_profile/: PFL_20260219_143345528_RIB.profile
emv_profiler/: __main__.py  cli.py  gui.py  visa_env_template.py
mc_profile_parser/: __main__.py  cli.py  env_template.py  gui.py  parser.py  visa_env_template.py
tests/: test_parser.py
