[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emv_profiler"
version = "0.2.0"
description = "EMV Profiler — GUI tool for parsing and comparing EMV card profiles"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "PyQt6>=6.4",
]

[project.scripts]
emv-profiler = "emv_profiler.cli:main"
emv-profiler-gui = "emv_profiler.gui:run_gui"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]
